--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Compila Tesi con XeLaTeX e Biber
+name: Compilazione Tesi con GitHub Action
 
 on:
   push:
@@ -10,24 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clona il repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Installa LaTeX completo con Biber
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-full biber
-
-      - name: Compila LaTeX (1° passaggio)
-        run: xelatex -interaction=nonstopmode main.tex
-
-      - name: Esegui Biber
-        run: biber main
-
-      - name: Compila LaTeX (2° e 3° passaggio)
-        run: |
-          xelatex -interaction=nonstopmode main.tex
-          xelatex -interaction=nonstopmode main.tex
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v3
+        with:
+          root_file: main.tex
+          latexmk_use_xelatex: true
+          use_biber: true
 
       - name: Carica il PDF generato
         uses: actions/upload-artifact@v4
